# Pico-10BASE-Thermometer

./: .gitmodules  CMakeLists.txt  README.md  main.c
